コミット２回目

--- a/sample.html
+++ b/sample.html
@@ -10,6 +10,7 @@
   <div class="header">Header領域</div>
   <div class="main">
     <h1>見出し</h1>
+    <h1>見出し</h1>
     <p>コンテンツ</p>
     <img src="img/sample1.jpg">
   </div>
